@startuml
skinparam classAttributeIconSize 0

package "BudgetManager.Models" {
  class Transaction {
    Id : int
    Title : string
    Amount : decimal
    Date : DateTime
    IsIncome : bool
  }
}

package "BudgetManager.Data" {
  class BudgetDbContext {
    Transactions : DbSet<Transaction>
  }
}

package "BudgetManager.Services" {
  class ReportService {
    +CalculateBalance(transactions) : decimal
    +CalculateMonthlyIncome(transactions, month) : decimal
    +CalculateMonthlyExpenses(transactions, month) : decimal
  }
}

package "BudgetManager.ViewModels" {
  class MainViewModel {
    Transactions
    SelectedTransaction
    Balance
    AddCommand
    DeleteSelectedCommand
  }
}

package "BudgetManager.Tests" {
  class ReportServiceTests {
    Balance_ShouldBeCorrect_AfterAddingIncomeAndExpense()
    Balance_ShouldBeZero_WhenNoTransactions()
    MonthlyReport_ShouldSumIncomeCorrectly()
    MonthlyReport_ShouldSumExpensesCorrectly()
    MonthlyReport_ShouldIgnoreOtherMonths()
    MonthlyExpenses_ShouldIgnoreOtherMonths()
  }
}

MainViewModel --> BudgetDbContext : uses
MainViewModel --> ReportService : uses
BudgetDbContext --> Transaction : stores
ReportService ..> Transaction : reads
ReportServiceTests ..> ReportService : tests
@enduml
